--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -28,6 +28,11 @@ local_protocol = "http"
 enabled = true
 head_sampling_rate = 1
 
+# Default configuration for bots and MCP servers
+[vars]
+BOTS = '[{"name":"local-deepseek","model":"deepseek-r1:7b","base_url":"http://localhost:11434","api_key":"local-key","mcp_servers":["default"],"custom_api_path":"/v1/chat/completions","api_type":"local-key"}]'
+MCP_SERVERS = '[{"name":"default","url":"http://localhost:3000/mcp","token":null,"need_confirm":null}]'
+
 # Scheduled tasks
 [triggers]
 crons = ["0 * * * *"]  # Run every hour
