--- a/backend/.dev.vars.example
+++ b/backend/.dev.vars.example
@@ -6,5 +6,5 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_CLENDAR_REDIRECT_URI=http://localhost:4000/callback/google-calendar
 GOOGLE_GMAIL_REDIRECT_URI=http://localhost:4000/callback/gmail
 API_TIMEOUT_MS=300000
-BOTS=[{"name":"local-deepseek","model":"deepseek-r1:7b","base_url":"http://localhost:11434","api_key":"local-key","mcp_servers":["default"],"custom_api_path":"/v1/chat/completions","api_type":"local-key"}]
-MCP_SERVERS=[{"name":"default","url":"http://localhost:3000/mcp","token":null,"need_confirm":null}]
+BOTS={"local-deepseek":{"name":"local-deepseek","model":"deepseek-r1:7b","base_url":"http://localhost:11434","api_key":"local-key","mcp_servers":["default"],"custom_api_path":"/v1/chat/completions","api_type":"local-key"}}
+MCP_SERVERS={"default":{"name":"default","url":"http://localhost:3000/mcp","token":null,"need_confirm":null}}
